PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplate__c/EformsignTemplate__c.object-meta.xml
<CustomObject>
    <description>이폼싸인 템플릿</description>
    <label>eformsign Template</label>
    <nameField>
        <label>eformsign Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>