PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplate__c/fields/IsDeletedInEformsign__c.field-meta.xml
<CustomField>
    <fullName>IsDeletedInEformsign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted In eformsign</label>
    <type>Checkbox</type>
</CustomField>