PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplate__c/fields/IsDeployedF__c.field-meta.xml
<CustomField>
    <fullName>IsDeployedF__c</fullName>
    <formula>NOT(ISNULL(DeployedTemplateVersion__c))
&amp;&amp;
NOT(IsDeletedInEformsign__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Deployed</label>
    <type>Checkbox</type>
</CustomField>