PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplate__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>대상 개체명</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>