PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplate__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <externalId>true</externalId>
    <label>Template Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>