PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplate__c/fields/TemplateVersion__c.field-meta.xml
<CustomField>
    <fullName>TemplateVersion__c</fullName>
    <label>Template Version</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>